# Procesamiento_Datos_Judiciales

./: LICENSE  README.md  pyproject.toml
Codigos/: 01_pipeline_sala_detenidos.ipynb  02_modelo_estrella_sala_detenidos_DWH.ipynb  app.py  modelo_estrella_sala_detenidos.ipynb  overview_transformation.ipynb  pipeline_sala_detenidos_v2.ipynb
DWH/: dim_instalacion.csv  dim_reporte.csv  dim_tiempo.csv  dim_ubicacion.csv  fact_detenidos.csv
Documentos/: InfoModeloDatos.xlsx  Modelo_relacional_proyecto_final_bigdata.pbix  Presentación.pptx
